# router-rs

./: Cargo.toml  README.md
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: route.rs
crates/core/src/http/: mod.rs  router.rs
crates/libs/: Cargo.toml
crates/libs/src/: log.rs
crates/macro/: Cargo.toml
crates/macro-impl/: Cargo.toml
crates/macro-impl/src/: attr.rs  item.rs  lib.rs  route.rs
crates/macro/src/: attr.rs  error.rs  lib.rs
crates/middleware/: Cargo.toml
crates/plugin/: Cargo.toml
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/router/src/axum/: router.rs
crates/router/src/restfull/: mod.rs
crates/runtime/: Cargo.toml
crates/showcase/: Cargo.toml
crates/std/: Cargo.toml
