[package]
name = "router-macro-impl"

description = "router-macro-impl"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
proc-macro = true


[lints]
workspace = true


[dependencies]
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
