[package]
name = "rust-router"

description = "rust-router"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lints]
workspace = true


[dependencies]
router-core = { workspace = true }

axum = { version = "0.8", features = ["http2", "macros"] }
