[package]
name = "router-showcase"

description = "router-showcase"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lints]
workspace = true


[dependencies]
router-build = { workspace = true }
router-libs  = { workspace = true, features = ["mimalloc"] }
router-macro = { workspace = true }

nill  = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
